--- a/app/templates/photo.html
+++ b/app/templates/photo.html
@@ -2,7 +2,7 @@
   <div class="modal-background" id="photo-background"></div>
   <div class="modal-content">
   	<div id="photo">
-      <img draggable="true" id="photo-content" src="{{ user.profile_photo.src }}">
+      <img draggable="true" id="photo-content" src="{{ photo_src }}">
   	</div>
   </div>
   <button class="modal-close close is-large" aria-label="close"></button>
