--- a/app/templates/profiles/user/connect-button/connected.html
+++ b/app/templates/profiles/user/connect-button/connected.html
@@ -1,3 +1,3 @@
-<span class="text">Connected</span><span class="icon">
+<span class="text">Allied</span><span class="icon">
  <i class="fa fa-link" aria-hidden="true"></i>
 </span>
