--- a/app/templates/profiles/user/connect-button/default.html
+++ b/app/templates/profiles/user/connect-button/default.html
@@ -1,4 +1,4 @@
-<span class="text">Connect</span>
+<span class="text">Ally</span>
 <span class="icon">
 <i class="fa fa-connectdevelop" aria-hidden="true"></i>
 </span>
