--- a/app/templates/profiles/user/connect-button/disconnect.html
+++ b/app/templates/profiles/user/connect-button/disconnect.html
@@ -1,3 +1,3 @@
-<span class="text">Disconnect</span>
+<span class="text">Split</span>
 <span class="icon"><i class="fas fa-unlink" aria-hidden="true"></i>
 </span>
