--- a/app/templates/navbar/navbar-contents.html
+++ b/app/templates/navbar/navbar-contents.html
@@ -1,5 +1,5 @@
 {% if current_user.is_authenticated %}
-{% if request.url_rule.endpoint != 'profiles.user' and current_user != user %}
+{% if request.url_rule.endpoint != 'profiles.user' or current_user != user %}
 <p class="control">
     <a href="/user/{{current_user.username}}/" class="button transition {% if class %}{{class}}{% endif %}">
       <span id="cog" class="icon">
@@ -18,6 +18,7 @@
 </p>
 {% endif %}
 {% endif %}
+<!-- 
 {% if request.url_rule.endpoint != 'main.main' %}
 <p class="control">
   <a href="/explore" class="button transition {% if class %}{{class}}{% endif %}">
@@ -27,6 +28,7 @@
   </a>
 </p>
 {% endif %}
+-->
 {% if request.url_rule.endpoint != 'main.settings' %}
 <p class="control">
   <a href="/settings" class="button transition {% if class %}{{class}}{% endif %}">
