--- a/app/templates/profiles/club/create.html
+++ b/app/templates/profiles/club/create.html
@@ -16,7 +16,7 @@
 
   <div id="edit-associate-image">
       <img draggable="false" id="edit-associate-image-content" src="{{ url_for('static', filename='images/club.jpg') }}">
-      <input type="file"  accept="image/*" name="image" id="upload" onchange="loadFile(event)" style="display: none;">
+      <input type="file"  accept="image/*" name="image" id="upload" onchange="loadImage(event, '#edit-associate-image-content')" style="display: none;">
     <button class="button is-large is-white" id="edit-associate-image-upload">
     <span class="icon is-medium">
       <i class="fa fa-camera-retro"></i>
@@ -50,7 +50,7 @@
       <br id="name-anchor">
     <div id="description">
       <h1><b>Description</b></h1>
-      <textarea class="textarea has-fixed-size" placeholder="Add your Club's description" id="bio-field" rows="3" maxlength="160"></textarea>
+      <textarea class="textarea has-fixed-size" placeholder="Add your Club's description" id="description-field" rows="3" maxlength="160"></textarea>
     </div>
       <div id="feedback-description" class="feedback">
         <div class="message"></div>
