--- a/app/templates/profiles/club/create.html
+++ b/app/templates/profiles/club/create.html
@@ -29,7 +29,7 @@
       <h1><b>Handle</b></h1>
         <div class="field has-addons">
           <p class="control">
-          <a class="button is-static">@</a>
+          <a class="button is-static">€</a>
           </p>
           <p class="control" style="width:100%;">
           <input class="input has-fixed-size" placeholder="Add your Club's handle" id="handle-field"></input>
