--- a/app/templates/profiles/club/profile.html
+++ b/app/templates/profiles/club/profile.html
@@ -10,7 +10,7 @@
       </div>
       <div id="profile-left-bottom">
         <p class="title is-4 selectable" style="color:black"><b>{{ club.name }}</b></p>
-        <p class="subtitle is-5 selectable" style="color:gray">!{{ club.handle }}</p>
+        <p class="subtitle is-5 selectable" style="color:gray">€{{ club.handle }}</p>
       </div>
     </div>
 
@@ -101,12 +101,12 @@
       {% for member in club.group.members %}
       <div class="subprofile box">
         <div class="subprofile-image-wrap">
-        <a class="subprofile-image" href="/user/{{member.username}}">
+        <a class="subprofile-image" href="{{url_for('profiles.user',username=member.username) | replace('%40', '@')}}">
             <img alt draggable="false" class="subprofile-image-content" src="{{member.profile_photo.src}}">
         </a>
       </div>
         <div class="subprofile-content">
-          <a class="subprofile-identity" href="/user/{{member.username}}">
+          <a class="subprofile-identity" href="{{url_for('profiles.user',username=member.username) | replace('%40', '@')}}">
             <span class="subprofile-name selectable"><b>{% if member.name %}{{member.name}}{% else %}{{member.username}}{% endif %}</b></span>
             <br>
             <span class="subprofile-username selectable">@{{member.username}}</span>
@@ -385,22 +385,22 @@ load_map_js();
 <script type="text/javascript">
 
   $(document).on('click', '#profile-image a', function(e) {
-    redirect({id:"club-photo"},"Profile photo", "/club/{{club.handle}}/photo/", changeToPhoto);
+    redirect({id:"club-photo"},"Profile photo", "/€{{club.handle}}/photo/", changeToPhoto);
       e.preventDefault();
   });
 
 
   $(document).on('click', '#edit-button', function(e) {
-    redirect({id:"edit-club"},"Edit profile", "/club/"+handle+"/edit/", changeToEdit);
+    redirect({id:"edit-club"},"Edit profile", "/€"+handle+"/edit/", changeToEdit);
     e.preventDefault();
   });
 
 $(document).on('click', '.close', function() {
-  redirect({id:"club-profile"}, "Profile", "/club/{{club.handle}}/", changeToProfile);
+  redirect({id:"club-profile"}, "Profile", "/€{{club.handle}}/", changeToProfile);
 });
 
 $(document).on('click', '.modal-background', function() {
-    redirect({id:"club-profile"}, "Profile", "/club/{{club.handle}}/", changeToProfile);
+    redirect({id:"club-profile"}, "Profile", "/€{{club.handle}}/", changeToProfile);
 });
 
 $(window).on("popstate", function() {
@@ -441,9 +441,9 @@ function changeToPhoto() {
 
 
 {% if request.url_rule.endpoint == 'profiles.edit_club' %}
-window.history.replaceState({id:"edit-club"},"Edit profile", "/club/{{club.handle}}/edit/");
+window.history.replaceState({id:"edit-club"},"Edit profile", "/€{{club.handle}}/edit/");
 {% elif request.url_rule.endpoint == 'profiles.club_photo' %}
-window.history.replaceState({id:"club-photo"},"Profile photo", "/club/{{club.handle}}/");
+window.history.replaceState({id:"club-photo"},"Profile photo", "/€{{club.handle}}/");
 {% else %}
 window.history.replaceState({id:"club-profile"},"Profile", "./");
 {% endif %}
