--- a/app/templates/profiles/user/profile.html
+++ b/app/templates/profiles/user/profile.html
@@ -118,15 +118,15 @@
       {% for club in user.clubs %}
       <div class="subprofile box">
         <div class="subprofile-image-wrap">
-        <a class="subprofile-image" href="/club/{{club.handle}}">
+        <a class="subprofile-image" href="{{url_for('profiles.club', handle=club.handle)}}">
             <img alt draggable="false" class="subprofile-image-content" src="{{club.profile_photo.src}}">
         </a>
       </div>
         <div class="subprofile-content">
-          <a class="subprofile-identity" href="/club/{{club.handle}}">
+          <a class="subprofile-identity" href="{{url_for('profiles.club', handle=club.handle)}}">
             <span class="subprofile-name selectable"><b>{% if club.name %}{{club.name}}{% else %}{{club.handle}}{% endif %}</b></span>
             <br>
-            <span class="subprofile-username selectable">!{{club.handle}}</span>
+            <span class="subprofile-username selectable">€{{club.handle}}</span>
           </a>
           <br>
         <span class="subprofile-bio selectable" maxlenght="30">{% if club.description %}{{club.description}}{% endif %}</span>
@@ -139,6 +139,22 @@
     </div>
     <div id="profile-projects" class="profile-associate vanish">
       {% for project in user.projects %}
+      <div class="subprofile box">
+        <div class="subprofile-image-wrap">
+        <a class="subprofile-image" href="{{url_for('profiles.project', handle=project.handle)}}">
+            <img alt draggable="false" class="subprofile-image-content" src="{{project.profile_photo.src}}">
+        </a>
+      </div>
+        <div class="subprofile-content">
+          <a class="subprofile-identity" href="{{url_for('profiles.project', handle=project.handle)}}">
+            <span class="subprofile-name selectable"><b>{% if project.name %}{{project.name}}{% else %}{{project.handle}}{% endif %}</b></span>
+            <br>
+            <span class="subprofile-username selectable">£{{project.handle}}</span>
+          </a>
+          <br>
+        <span class="subprofile-bio selectable" maxlenght="30">{% if project.description %}{{project.description}}{% endif %}</span>
+      </div>
+      </div>
       {% endfor %}
       {% if user==current_user %}
       <div class="add-specific-button" id="create-project-button"><span>Create project</span></div>
